add the UMLclass

--- a/Server/.classpath
+++ b/Server/.classpath
@@ -26,5 +26,6 @@
 			<attribute name="owner.project.facets" value="me.hibernate"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/hufeiya/下载/slf4j-nop-1.7.13.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
