--- a/Server/.classpath
+++ b/Server/.classpath
@@ -27,5 +27,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/home/hufeiya/下载/slf4j-nop-1.7.13.jar"/>
+	<classpathentry kind="lib" path="/home/hufeiya/下载/gson-2.3.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="/home/hufeiya/下载/gson-2.3.1.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
