--- a/AndroidClient/app/build.gradle
+++ b/AndroidClient/app/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:recyclerview-v7:23.1.0'
+    compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'com.google.code.gson:gson:2.5'
+
 }
