--- a/AndroidClient/app/build.gradle
+++ b/AndroidClient/app/build.gradle
@@ -29,5 +29,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.google.code.gson:gson:2.5'
+    compile('com.mikepenz:materialdrawer:4.5.5@aar') {
+        transitive = true
+    }
 
 }
