--- a/AndroidClient/app/build.gradle
+++ b/AndroidClient/app/build.gradle
@@ -32,5 +32,7 @@ dependencies {
     compile('com.mikepenz:materialdrawer:4.5.5@aar') {
         transitive = true
     }
+    compile files('libs/faceppofflinesdk.jar')
+    compile files('libs/faceppsdk.jar')
 
 }
