--- a/Server/WebRoot/WEB-INF/web.xml
+++ b/Server/WebRoot/WEB-INF/web.xml
@@ -12,6 +12,14 @@
 		<servlet-name>login</servlet-name>
 		<servlet-class>com.hufeiya.controller.LoginServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>location</servlet-name>
+		<servlet-class>com.hufeiya.controller.LocationServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>location</servlet-name>
+		<url-pattern>/location</url-pattern>
+	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>login</servlet-name>
 		<url-pattern>/login</url-pattern>
